
- `AbstractAnnotationDrivenExtension` is now deprecated and its logic was moved to `default` methods of
  `IAnnotationDrivenExtension` which should be implemented directly now instead of extending the abstract class.

- `@ConfineMetaClassChanges` is now repeatable

- `@Issue` is now repeatable

- `@Requires` is now repeatable

- `@See` is now repeatable

- `@Subject` is now repeatable

- `@Use` is now repeatable

- `@UseModules` is now repeatable

- Fix https://github.com/spockframework/spock/issues/994[#994] nested closures in argument constraints are not treated as implicit assertions anymore


== 2.0-M3 (2020-06-11)

=== Breaking Changes

==== Sputnik Runner removed (an alternative)

In 2.0-M1 the Sputnik runner was removed and the 2.0-M2 release notes explicitly mentioned that enhancements
that extend `Sputnik` or use it as a delegate like for example the `PowerMockRunnerDelegate` will not work anymore.

This is not the full truth though, but be aware that the information in this section is just for informational purpose.
This is not a solution the Spock maintainers explicitly support or maintain. It is just mentioned as hint for those
that have no other choice right now. It is strongly recommended to instead use native solutions or integrations. If
those are not available, you might consider asking about proper integration with Spock for a proper long-term solution.
As long as this is not available, the work-around described here is at least usable as fallback and mid-term solution
as long as the JUnit team decides to maintain this legacy support module.

There is a JUnit 4 runner provided by JUnit 5 called `JUnitPlatform` that can
run any JUnit platform based tests - like Spock 2+ based tests - in a JUnit 4 environment. This is intended
for situations where an IDE, build tool, CI server, or similar does not yet natively support JUnit platform.
It is provided in the artifact `org.junit.platform:junit-platform-runner`.
